// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test TodoDetailItem component should handle uncheck checklist 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-iqyJx fzwjUx"
      >
        <div
          class="sc-gtLWhw jPWJOW"
          style="font-weight: bold; font-size: 16px; padding-bottom: 6px;"
        >
          Check List
        </div>
        <div
          class="sc-jIyAiq iridzR"
          color="#d25a12"
        >
          <svg
            color="#d25a12"
            data-testid="uncheck-button"
            fill="currentColor"
            height="18"
            stroke="currentColor"
            stroke-width="0"
            version="1.1"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14 0h-12c-1.1 0-2 0.9-2 2v12c0 1.1 0.9 2 2 2h12c1.1 0 2-0.9 2-2v-12c0-1.1-0.9-2-2-2zM14 14h-12v-12h12v12z"
            />
          </svg>
          <div
            class="sc-lnsxGb glTJah"
          >
            <div
              class="sc-gtLWhw jPWJOW"
              style="flex: 1;"
            >
              vvvvv
            </div>
            <svg
              data-testid="delete-check-button"
              fill="#e2342d"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m289.94 256 95-95A24 24 0 0 0 351 127l-95 95-95-95a24 24 0 0 0-34 34l95 95-95 95a24 24 0 1 0 34 34l95-95 95 95a24 24 0 0 0 34-34z"
              />
            </svg>
          </div>
        </div>
        <div
          class="sc-eDHQDy iWIXDk"
        >
          <input
            class="sc-giBObj hDMvKn"
            placeholder="Enter new task todo..."
            type="text"
            value=""
          />
          <svg
            color="#d25a12"
            fill="currentColor"
            height="20"
            stroke="currentColor"
            stroke-width="0"
            style="cursor: pointer;"
            viewBox="0 0 512 512"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M416 277.333H277.333V416h-42.666V277.333H96v-42.666h138.667V96h42.666v138.667H416v42.666z"
            />
          </svg>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-iqyJx fzwjUx"
    >
      <div
        class="sc-gtLWhw jPWJOW"
        style="font-weight: bold; font-size: 16px; padding-bottom: 6px;"
      >
        Check List
      </div>
      <div
        class="sc-jIyAiq iridzR"
        color="#d25a12"
      >
        <svg
          color="#d25a12"
          data-testid="uncheck-button"
          fill="currentColor"
          height="18"
          stroke="currentColor"
          stroke-width="0"
          version="1.1"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14 0h-12c-1.1 0-2 0.9-2 2v12c0 1.1 0.9 2 2 2h12c1.1 0 2-0.9 2-2v-12c0-1.1-0.9-2-2-2zM14 14h-12v-12h12v12z"
          />
        </svg>
        <div
          class="sc-lnsxGb glTJah"
        >
          <div
            class="sc-gtLWhw jPWJOW"
            style="flex: 1;"
          >
            vvvvv
          </div>
          <svg
            data-testid="delete-check-button"
            fill="#e2342d"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m289.94 256 95-95A24 24 0 0 0 351 127l-95 95-95-95a24 24 0 0 0-34 34l95 95-95 95a24 24 0 1 0 34 34l95-95 95 95a24 24 0 0 0 34-34z"
            />
          </svg>
        </div>
      </div>
      <div
        class="sc-eDHQDy iWIXDk"
      >
        <input
          class="sc-giBObj hDMvKn"
          placeholder="Enter new task todo..."
          type="text"
          value=""
        />
        <svg
          color="#d25a12"
          fill="currentColor"
          height="20"
          stroke="currentColor"
          stroke-width="0"
          style="cursor: pointer;"
          viewBox="0 0 512 512"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M416 277.333H277.333V416h-42.666V277.333H96v-42.666h138.667V96h42.666v138.667H416v42.666z"
          />
        </svg>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Test TodoDetailItem component should match its snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-iqyJx fzwjUx"
      >
        <div
          class="sc-gtLWhw jPWJOW"
          style="font-weight: bold; font-size: 16px; padding-bottom: 6px;"
        >
          Check List
        </div>
        <div
          class="sc-jIyAiq iridzR"
          color="#d25a12"
        >
          <svg
            data-testid="check-button"
            fill="#d25a12"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 448 512"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64zM337 209L209 337c-9.4 9.4-24.6 9.4-33.9 0l-64-64c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l47 47L303 175c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9z"
            />
          </svg>
          <div
            class="sc-lnsxGb glTJah"
          >
            <div
              class="sc-gtLWhw jPWJOW"
              style="flex: 1;"
            >
              vvvvv
            </div>
            <svg
              data-testid="delete-check-button"
              fill="#e2342d"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m289.94 256 95-95A24 24 0 0 0 351 127l-95 95-95-95a24 24 0 0 0-34 34l95 95-95 95a24 24 0 1 0 34 34l95-95 95 95a24 24 0 0 0 34-34z"
              />
            </svg>
          </div>
        </div>
        <div
          class="sc-eDHQDy iWIXDk"
        >
          <input
            class="sc-giBObj hDMvKn"
            placeholder="Enter new task todo..."
            type="text"
            value=""
          />
          <svg
            color="#d25a12"
            fill="currentColor"
            height="20"
            stroke="currentColor"
            stroke-width="0"
            style="cursor: pointer;"
            viewBox="0 0 512 512"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M416 277.333H277.333V416h-42.666V277.333H96v-42.666h138.667V96h42.666v138.667H416v42.666z"
            />
          </svg>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-iqyJx fzwjUx"
    >
      <div
        class="sc-gtLWhw jPWJOW"
        style="font-weight: bold; font-size: 16px; padding-bottom: 6px;"
      >
        Check List
      </div>
      <div
        class="sc-jIyAiq iridzR"
        color="#d25a12"
      >
        <svg
          data-testid="check-button"
          fill="#d25a12"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 448 512"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64zM337 209L209 337c-9.4 9.4-24.6 9.4-33.9 0l-64-64c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l47 47L303 175c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9z"
          />
        </svg>
        <div
          class="sc-lnsxGb glTJah"
        >
          <div
            class="sc-gtLWhw jPWJOW"
            style="flex: 1;"
          >
            vvvvv
          </div>
          <svg
            data-testid="delete-check-button"
            fill="#e2342d"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m289.94 256 95-95A24 24 0 0 0 351 127l-95 95-95-95a24 24 0 0 0-34 34l95 95-95 95a24 24 0 1 0 34 34l95-95 95 95a24 24 0 0 0 34-34z"
            />
          </svg>
        </div>
      </div>
      <div
        class="sc-eDHQDy iWIXDk"
      >
        <input
          class="sc-giBObj hDMvKn"
          placeholder="Enter new task todo..."
          type="text"
          value=""
        />
        <svg
          color="#d25a12"
          fill="currentColor"
          height="20"
          stroke="currentColor"
          stroke-width="0"
          style="cursor: pointer;"
          viewBox="0 0 512 512"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M416 277.333H277.333V416h-42.666V277.333H96v-42.666h138.667V96h42.666v138.667H416v42.666z"
          />
        </svg>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Test TodoDetailItem component should render empty checklist todo snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-iqyJx ilDgpx"
      >
        <div
          class="sc-gtLWhw jPWJOW"
          style="font-weight: bold; font-size: 16px; padding-bottom: 6px;"
        >
          Check List
        </div>
        <div
          class="sc-eDHQDy iWIXDk"
        >
          <input
            class="sc-giBObj hDMvKn"
            placeholder="Enter new task todo..."
            type="text"
            value=""
          />
          <svg
            color="#d25a12"
            fill="currentColor"
            height="20"
            stroke="currentColor"
            stroke-width="0"
            style="cursor: pointer;"
            viewBox="0 0 512 512"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M416 277.333H277.333V416h-42.666V277.333H96v-42.666h138.667V96h42.666v138.667H416v42.666z"
            />
          </svg>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-iqyJx ilDgpx"
    >
      <div
        class="sc-gtLWhw jPWJOW"
        style="font-weight: bold; font-size: 16px; padding-bottom: 6px;"
      >
        Check List
      </div>
      <div
        class="sc-eDHQDy iWIXDk"
      >
        <input
          class="sc-giBObj hDMvKn"
          placeholder="Enter new task todo..."
          type="text"
          value=""
        />
        <svg
          color="#d25a12"
          fill="currentColor"
          height="20"
          stroke="currentColor"
          stroke-width="0"
          style="cursor: pointer;"
          viewBox="0 0 512 512"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M416 277.333H277.333V416h-42.666V277.333H96v-42.666h138.667V96h42.666v138.667H416v42.666z"
          />
        </svg>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
